# GrooverGFX

./: .gitignore  CMakeLists.txt  README.md  build.sh  build.zig  build.zig.zon  hello.zig  main.c  scene0.c  scene1.c  scene2.c  scene3.c  scene4.c  shell.nix
examples/: scene0.zig  scene1.zig  scene2.zig  scene3.zig  scene3a.zig  scene3b.zig  scene3c.zig  scene3d.zig  scene3e.zig  scene4.zig
src/: CMakeLists.txt  gfx_types.h  image.c  image.h  main.zig  matrix.c  matrix.h  painter.c  painter.h  render2d.c  render2d.h  root.zig  scence4b.zig  scene0.zig  scene1.zig  scene2.zig  scene3.zig  scene3a.zig  scene3b.zig  scene3c.zig  scene3d.zig  scene3e.zig  scene4.zig
src/2d/: gfx_types.h  matrix.c  matrix.h  painter.c  render2d.h
src/3d/: CMakeLists.txt  camera.c  camera.h  camera.zig  gfx_types.c  gfx_types.h  gfx_types.zig  image.c  image.h  image.zig  linked_list.c  linked_list.h  materials.c  materials.h  materials.zig  math3d.c  math3d.h  math3d.zig  matrix.c  matrix.h  matrix.zig  models.c  models.h  models.zig  ray3d.c  ray3d.h  ray3d.zig  render_oo.c  render_oo.h  render_ray.c  render_ray.h  render_ray.zig  scenedef.c  scenedef.h  scenedef.zig
src/assets/: CMakeLists.txt  dino.ppm
tests/: CMakeLists.txt  test_camera.c  test_image.c  test_matrix.c  test_ray.c
tests/mocks/: CMakeLists.txt
